--- a/be/requirements.txt
+++ b/be/requirements.txt
@@ -17,6 +17,8 @@ cffi==1.14.0              # via cryptography
 chardet==3.0.4            # via httpx, requests
 click==7.1.1              # via black, pip-tools
 cryptography==2.8         # via berglas-python, social-auth-core
+data==0.4                 # via latex
+decorator==4.4.2          # via data
 defusedxml==0.6.0         # via python3-openid, social-auth-core
 dj-database-url==0.5.0    # via -r requirements.in
 django-cors-headers==3.2.1  # via -r requirements.in
@@ -30,6 +32,8 @@ entrypoints==0.3          # via flake8
 flake8-black==0.1.1       # via -r requirements.in
 flake8-bugbear==20.1.4    # via -r requirements.in
 flake8==3.7.9             # via -r requirements.in, flake8-black, flake8-bugbear
+funcsigs==1.0.2           # via data
+future==0.18.2            # via latex
 google-api-core[grpc]==1.16.0  # via google-cloud-core, google-cloud-kms, google-cloud-pubsub
 google-auth==1.11.3       # via google-api-core, google-cloud-storage
 google-cloud-core==1.3.0  # via google-cloud-storage
@@ -51,6 +55,8 @@ hstspreload==2020.3.17    # via httpx
 httpx==0.12.1             # via -r requirements.in
 hyperframe==5.2.0         # via h2
 idna==2.9                 # via httpx, requests
+importlib-metadata==1.5.0  # via pluggy, pytest
+latex==0.7.0              # via -r requirements.in
 markdown==3.2.1           # via django-markdownify
 mccabe==0.6.1             # via flake8
 more-itertools==8.2.0     # via pytest
@@ -83,11 +89,13 @@ requests-oauthlib==1.3.0  # via social-auth-core
 requests==2.23.0          # via -r requirements.in, google-api-core, requests-oauthlib, social-auth-core, twilio
 rfc3986==1.3.2            # via httpx
 rsa==4.0                  # via google-auth, python-jose
-six==1.14.0               # via bleach, cryptography, ecdsa, google-api-core, google-auth, google-resumable-media, grpcio, packaging, pip-tools, protobuf, python-dateutil, python-jose, social-auth-app-django, social-auth-core, twilio
+shutilwhich==1.1.0        # via latex
+six==1.14.0               # via bleach, cryptography, data, ecdsa, google-api-core, google-auth, google-resumable-media, grpcio, packaging, pip-tools, protobuf, python-dateutil, python-jose, social-auth-app-django, social-auth-core, twilio
 sniffio==1.1.0            # via httpx
 social-auth-app-django==3.1.0  # via -r requirements.in
 social-auth-core==3.3.0   # via social-auth-app-django
 sqlparse==0.3.1           # via django, django-debug-toolbar
+tempdir==0.7.1            # via latex
 toml==0.10.0              # via black
 tqdm==4.43.0              # via -r requirements.in
 twilio==6.37.0            # via -r requirements.in
@@ -98,6 +106,7 @@ urllib3==1.25.8           # via httpx, requests
 wcwidth==0.1.8            # via pytest
 webencodings==0.5.1       # via bleach
 whitenoise==5.0.1         # via -r requirements.in
+zipp==3.1.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
