--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,21 @@ services:
       - POSTGRES_DB=covid-income
     networks:
       - webnet
+  be:
+    command: bash -c "python manage.py migrate; python manage.py runserver 0:8000"
+    build:
+      context: ./be
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ./be:/app
+    ports:
+      - "8000:8000"
+    environment:
+      - PUBSUB_EMULATOR_HOST=pubsub:8681
+    networks:
+      - webnet
+    depends_on:
+      - db
 
 networks:
   webnet:
