--- a/be/requirements.txt
+++ b/be/requirements.txt
@@ -39,7 +39,7 @@ google-auth==1.11.3       # via google-api-core, google-cloud-storage
 google-cloud-core==1.3.0  # via google-cloud-storage
 google-cloud-kms==1.3.0   # via berglas-python
 google-cloud-pubsub==1.3.1  # via -r requirements.in
-google-cloud-storage==1.26.0  # via berglas-python, django-storages
+google-cloud-storage==1.26.0  # via -r requirements.in, berglas-python, django-storages
 google-resumable-media==0.5.0  # via google-cloud-storage
 googleapis-common-protos[grpc]==1.51.0  # via google-api-core, grpc-google-iam-v1
 graphene==3.0.dev20190817210753  # via -r requirements.in
@@ -55,7 +55,6 @@ hstspreload==2020.3.17    # via httpx
 httpx==0.12.1             # via -r requirements.in
 hyperframe==5.2.0         # via h2
 idna==2.9                 # via httpx, requests
-importlib-metadata==1.5.0  # via pluggy, pytest
 latex==0.7.0              # via -r requirements.in
 markdown==3.2.1           # via django-markdownify
 mccabe==0.6.1             # via flake8
@@ -106,7 +105,6 @@ urllib3==1.25.8           # via httpx, requests
 wcwidth==0.1.8            # via pytest
 webencodings==0.5.1       # via bleach
 whitenoise==5.0.1         # via -r requirements.in
-zipp==3.1.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
