--- a/fe/Dockerfile.prod
+++ b/fe/Dockerfile.prod
@@ -2,15 +2,13 @@ FROM node:12-slim
 
 WORKDIR /app
 
-COPY fe/package.json ./fe/
-COPY fe/yarn.lock ./fe/
+COPY package.json ./
+COPY yarn.lock ./
 
-RUN cd fe && yarn install --frozen-lockfile
+RUN yarn install --frozen-lockfile
 
 COPY . ./
 
-RUN cd fe && yarn run build
-
-WORKDIR /app/fe
+RUN yarn run build
 
 CMD exec yarn run start
