--- a/be/requirements.txt
+++ b/be/requirements.txt
@@ -34,18 +34,19 @@ flake8-bugbear==20.1.4    # via -r requirements.in
 flake8==3.7.9             # via -r requirements.in, flake8-black, flake8-bugbear
 funcsigs==1.0.2           # via data
 future==0.18.2            # via latex
-google-api-core[grpc]==1.16.0  # via google-cloud-core, google-cloud-kms, google-cloud-pubsub
+google-api-core[grpc]==1.16.0  # via google-cloud-core, google-cloud-kms, google-cloud-pubsub, google-cloud-secret-manager
 google-auth==1.11.3       # via google-api-core, google-cloud-storage
 google-cloud-core==1.3.0  # via google-cloud-storage
 google-cloud-kms==1.3.0   # via berglas-python
 google-cloud-pubsub==1.3.1  # via -r requirements.in
+google-cloud-secret-manager==0.2.0  # via -r requirements.in
 google-cloud-storage==1.26.0  # via -r requirements.in, berglas-python, django-storages
 google-resumable-media==0.5.0  # via google-cloud-storage
 googleapis-common-protos[grpc]==1.51.0  # via google-api-core, grpc-google-iam-v1
 graphene==3.0.dev20190817210753  # via -r requirements.in
 graphql-core==3.0.3       # via graphene, graphql-relay
 graphql-relay==3.0.0      # via graphene
-grpc-google-iam-v1==0.12.3  # via google-cloud-kms, google-cloud-pubsub
+grpc-google-iam-v1==0.12.3  # via google-cloud-kms, google-cloud-pubsub, google-cloud-secret-manager
 grpcio==1.27.2            # via google-api-core, googleapis-common-protos, grpc-google-iam-v1
 gunicorn==20.0.4          # via -r requirements.in
 h11==0.9.0                # via httpx
