--- a/be/Dockerfile.prod
+++ b/be/Dockerfile.prod
@@ -2,7 +2,7 @@
 # https://hub.docker.com/_/python
 FROM python:3.8-slim
 
-RUN apt-get update && apt-get install -y git texlive-xetex texlive-latex-base
+RUN apt-get update && apt-get install -y git texlive-xetex texlive-latex-base latexmk
 
 ENV APP_HOME /app
 WORKDIR $APP_HOME
