--- a/be/requirements.txt
+++ b/be/requirements.txt
@@ -29,6 +29,7 @@ django-storages[google]==1.9.1  # via -r requirements.in
 django==3.0.4             # via -r requirements.in, django-cors-headers, django-debug-toolbar, django-markdownify, django-storages
 ecdsa==0.15               # via python-jose
 entrypoints==0.3          # via flake8
+fancycompleter==0.9.1     # via pdbpp
 flake8-black==0.1.1       # via -r requirements.in
 flake8-bugbear==20.1.4    # via -r requirements.in
 flake8==3.7.9             # via -r requirements.in, flake8-black, flake8-bugbear
@@ -63,6 +64,7 @@ more-itertools==8.2.0     # via pytest
 oauthlib==3.1.0           # via requests-oauthlib, social-auth-core
 packaging==20.3           # via pytest
 pathspec==0.7.0           # via black
+pdbpp==0.10.2             # via -r requirements.in
 phonenumbers==8.12.0      # via -r requirements.in
 pip-tools==4.5.1          # via -r requirements.in
 pluggy==0.13.1            # via pytest
@@ -74,8 +76,10 @@ pyasn1==0.4.8             # via pyasn1-modules, python-jose, rsa
 pycodestyle==2.5.0        # via flake8
 pycparser==2.20           # via cffi
 pyflakes==2.1.1           # via flake8
+pygments==2.6.1           # via pdbpp
 pyjwt==1.7.1              # via -r requirements.in, social-auth-core, twilio
 pyparsing==2.4.6          # via packaging
+pyrepl==0.9.0             # via fancycompleter
 pytest-django==3.8.0      # via -r requirements.in
 pytest-dotenv==0.4.0      # via -r requirements.in
 pytest==5.4.1             # via -r requirements.in, pytest-django, pytest-dotenv
@@ -106,6 +110,7 @@ urllib3==1.25.8           # via httpx, requests
 wcwidth==0.1.8            # via pytest
 webencodings==0.5.1       # via bleach
 whitenoise==5.0.1         # via -r requirements.in
+wmctrl==0.3               # via pdbpp
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
