PDF endpoint as Cloud Task
Added back /build_pdf for testing kicking task off.

--- a/be/requirements.in
+++ b/be/requirements.in
@@ -13,6 +13,7 @@ flake8-bugbear
 google-cloud-pubsub
 google-cloud-storage
 google-cloud-secret-manager
+google-cloud-tasks
 graphene==3.0.dev20190817210753
 gunicorn
 httpx
