Initial video page

--- a/fe/package.json
+++ b/fe/package.json
@@ -31,7 +31,8 @@
     "prettier": "^1.19.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-icons": "^3.9.0"
+    "react-icons": "^3.9.0",
+    "react-youtube-embed": "^1.0.3"
   },
   "prettier": {
     "trailingComma": "all"
